iml-services/iml-journal/src/snapshots/iml_journal__tests__client_connection_parser-2.snap
---
source: iml-services/iml-journal/src/lib.rs
expression: client_connection_parser(input).unwrap()
---
(
    27559,
    "client 26959b68-1208-1fca-1f07-da2dc872c55f from 192.168.122.218@tcp connected to target lustre-OST0001",
)
