iml-services/iml-journal/src/snapshots/iml_journal__tests__client_eviction_parser.snap
---
source: iml-services/iml-journal/src/lib.rs
expression: client_eviction_parser(input).unwrap()
---
(
    3636,
    "client 0@lo evicted: lock callback timer expired after 101s",
)
