iml-services/iml-journal/src/snapshots/iml_journal__tests__server_security_flavor_parser-2.snap
---
source: iml-services/iml-journal/src/lib.rs
expression: server_security_flavor_parser(input).unwrap()
---
(
    380,
    "with security flavor null",
)
