iml-services/iml-journal/src/snapshots/iml_journal__tests__server_security_flavor_parser.snap
---
source: iml-services/iml-journal/src/lib.rs
expression: server_security_flavor_parser(input).unwrap()
---
(
    5629,
    "with security flavor null",
)
